initial react app setup
